Initial cross-version support for items